--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/randomatic": "^3.1.5",
+    "@types/sharp": "^0.31.1",
     "@types/uuid": "^10.0.0",
     "prisma": "^6.0.0",
     "ts-node": "^10.9.2",
@@ -41,11 +42,13 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "onnxruntime-node": "^1.20.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pug": "^3.0.3",
     "randomatic": "^3.1.1",
+    "sharp": "^0.33.5",
     "uuid": "^10.0.0"
   }
 }
