--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "literashpere",
+  "name": "AI_MODELS",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,7 @@
   "dependencies": {
     "@prisma/client": "^6.0.0",
     "@types/morgan": "^1.9.9",
+    "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -46,9 +47,11 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "postcss": "^8.4.49",
     "pug": "^3.0.3",
     "randomatic": "^3.1.1",
     "sharp": "^0.33.5",
+    "tailwindcss": "^3.4.16",
     "uuid": "^10.0.0"
   }
 }
