--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "unique-username-generator": "^1.3.0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@prisma/client": "^6.0.0",
     "@types/morgan": "^1.9.9",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
